add qualitive comparison

--- a/index.html
+++ b/index.html
@@ -121,7 +121,25 @@
   </div>
 </section>
 
-
+<section class="hero is-light is-small"></section>
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">Qualitive Comparison</h2>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <td width="80%" style="text-align: center;"><img src="static/images/compare.png"/></td>
+      </div>
+      <p>
+       Image sequence results of our renderer and baselines. The first column of ground truth is the reference image for
+       all methods. The first column of "ours with an additional reference image" is another reference image for our multi-reference
+       method. The video quality can be further improved by providing additional reference images.
+      </p>
+    </div>
+  </div>
+</section>
 
 <section class="hero is-light is-small">
   <div class="hero-body">
